--- a/index.html
+++ b/index.html
@@ -3,7 +3,38 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
+      crossorigin="anonymous"
+    />
     <title>Todo List</title>
   </head>
-  <body></body>
+  <body>
+    <div>
+      <h2>Todo List</h2>
+      <h4>Nueva Tarea</h4>
+      <form id="form">
+        <label class="form-label">Tarea</label>
+        <input id="input" type="text" placeholder="Ingrese su tarea" />
+        <button
+          id="btn"
+          type="button"
+          style="background-color: rgb(33, 189, 33)"
+        >
+          Agregar
+        </button>
+      </form>
+    </div>
+    <div>
+      <ul id="lista-tareas"></ul>
+    </div>
+    <div class="count-tareas">
+      <h5 id="total-tareas">Total:</h5>
+      <h5 id="total-realizadas">Realizadas:</h5>
+    </div>
+
+    <script src="./assets/js/index.js"></script>
+  </body>
 </html>
